Update screenshot, description

--- a/README
+++ b/README
@@ -1,6 +1,14 @@
-dreamsynth
+mechatropolis
 ==========
 by odbol
+
+
+An ancient city, built by beings unknown long before the dregs of our time, dots a familiar landscape. 
+What somber secrets does the city trap within its sonic boundaries? Wind whispers through the gaps of the abandoned buildings,
+and sometimes strange machinery can be heard ticking off below the ground.
+A light touch triggers reverberations into the barren wastes surrounding the mechatropolis.
+
+An interactive musical instrument. Click the unmute button to hear the sound and play the instrument. Variations include the colors of the sculpture (single palette is rare), and the background music tracks (most are more ambient, but in rare cases you will get more lively percussion and beats). 
 
 
 Credits
