feat(spheres): update description/screenshot/meta. add story and secret lyrics

--- a/README
+++ b/README
@@ -1,9 +1,10 @@
-mechatropolis
+ascension of the builders
 ==========
 by odbol
 
+Their city consumed by flames of a dying star, The Builders looked back in reminiscent grace, their memories decaying. As the solar conflagration returned their blood to the dust beneath the streets, a curious force swept through their physical bodies, separating flesh and consciousness from their souls.
 
-An ancient city, built by beings unknown long before the dregs of our time, dots a familiar landscape. What somber secrets does the city trap within its sonic boundaries? Wind whispers through the gaps of the abandoned buildings, and sometimes strange machinery can be heard ticking off below the ground. A light touch triggers reverberations into the barren wastes surrounding the mechatropolis.
+Reborn as spheres of plasma energy, those who built the ancient city from sinew and steel begin to ascend. The mechatropolis receding quickly below them, their memories erased, The Ascended begin on their forever upward path toward new understandings of the oldest knowledge.
 
 An interactive musical instrument. Click the unmute button to hear the sound and play the instrument. Variations include the colors of the sculpture (single palette is rare), and the background music tracks (most are more ambient, but in rare cases you will get more lively percussion and beats). 
 
@@ -11,8 +12,6 @@ An interactive musical instrument. Click the unmute button to hear the sound and
 Credits
 -------
 
-Inspired by [Three.js](https://threejs.org) examples by Mr. Doob.
+Code inspired by [Three.js](https://threejs.org) examples by Mr. Doob.
 
-3d models by: 
-
-[Poly by Google](http://poly.google.com) (CC-BY)
+Story inspired by "Soundtrack for a Deleted Dream World" by City of the Asleep.
